Update index.html and aboutus

--- a/aboutus.html
+++ b/aboutus.html
@@ -165,12 +165,12 @@
                     <div class="content pt-4 pt-lg-0">
 
                         <h4>
-                            Gotech Bytes is a student run non profit educational and community service organization. Its mission is to spark student interest in Computer Science from the earliest grades through high school.
+                            Gotech Bytes is a student run non profit educational and community service organization. Its mission is to spark student interest in Computer Science and Maths from the earliest grades through high school.
                         </h4>
                         <ul>
                             <li><i class="bi bi-check-circle"></i> Students sharing their knowledge with other students.</li>
-                            <li><i class="bi bi-check-circle"></i> Fun and interative projects. </li>
-                            <li><i class="bi bi-check-circle"></i> Coach students to be independednt learners
+                            <li><i class="bi bi-check-circle"></i> Fun and interactive projects. </li>
+                            <li><i class="bi bi-check-circle"></i> Coach students to be independent learners
                             <li><i class="bi bi-check-circle"></i> Provide students with tools and techniques to continue learning beyond the classroom.</li>
                         </ul>
 
@@ -346,7 +346,7 @@
         <div class="container">
 
             <div class="copyright">
-                A non-profit, K-12 STEM initiative by the high-school students. <br />
+                A 501(c)(3) non-profit, K-12 STEM initiative by the high-school students. <br />
                 &copy; Copyright <strong><span>GoTechBytes</span></strong>. All Rights Reserved.
             </div>
 
