--- a/index.html
+++ b/index.html
@@ -124,14 +124,14 @@
                     <div>
                         <h1>Learn to Code <span style="font-size:12px; vertical-align: middle;">&#9632;</span> Build a Better Future</h1>
 
-                        <h2>GoTech Bytes is a non-profit STEM outreach with focus in Computer Science and Maths for middle and high school students.</h2>
+                        <h2>Gotech Bytes is a student run 501(c)(3) non profit educational and community service organization. Its mission is to spark student interest in <bold>Compter Science</bold> and <bold>Maths</bold> from the earliest grades through high school.</h2>
 
 
                         <ul>
                             <li><i class="bi bi-check-circle"></i> Students teaching other students</li>
-                            <li><i class="bi bi-check-circle"></i> Offer <mark class="fw-semibold text-success">FREE</mark> courses and education material with fun and interative projects. </li>
+                            <li><i class="bi bi-check-circle"></i> Offer <mark class="fw-semibold text-success">FREE</mark> courses and education material with fun and interactive projects. </li>
                             <li><i class="bi bi-check-circle"></i> Spark student interest in Computer Science from the earliest grades through high school. </li>
-                            <li><i class="bi bi-check-circle"></i> Coach students to be independednt learners. </li>
+                            <li><i class="bi bi-check-circle"></i> Coach students to be independent learners. </li>
                             <li><i class="bi bi-check-circle"></i> Provide students with tools and techniques to continue learning beyond the classroom.</li>
                         </ul>
                         <a href="index.html#popular-courses" class="btn-get-started scrollto">Get Started</a>
