--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <div>
                         <h1>Learn to Code <span style="font-size:12px; vertical-align: middle;">&#9632;</span> Build a Better Future</h1>
 
-                        <h2>Gotech Bytes is a student run 501(c)(3) non profit educational and community service organization. Its mission is to spark student interest in <bold>Compter Science</bold> and <bold>Maths</bold> from the earliest grades through high school.</h2>
+                        <h2>Gotech Bytes is a student run 501(c)(3) non profit educational and community service organization. Its mission is to spark student interest in <bold>Computer Science</bold> and <bold>Maths</bold> from the earliest grades through high school.</h2>
 
 
                         <ul>
