--- a/volunteer.html
+++ b/volunteer.html
@@ -75,20 +75,21 @@
     <section id="hero">
         <div class="container">
 
-            <div class="section-title" data-aos="zoom-in">
+            <div class="section-title">
                 <br />
-                <h1>Spread Your Knowledge <span style="font-size:12px; vertical-align: middle;">&#9632;</span> Volunteer With Us</h1>
+                <h3>Volunteer With Us</h3>
+                <p>Help us in our mission of bringing Computer Science and Maths to every student<span style="font-size:12px; vertical-align: middle;">&#9632;</span> </p>
                 <br />
             </div>
 
             <div class="row">
 
-                <div class="col-lg-3 d-flex align-items-stretch" data-aos="fade-right">
+                <div class="col-lg-3 d-flex align-items-stretch" data-aos="fade-in">
 
 
                 </div>
 
-                <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch" data-aos="fade-left">
+                <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch" data-aos="fade-in">
                     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfb726slgYJg8wkFkNIQQN8mJPndq_lMPq40nzuwF0OF7rxTA/viewform?embedded=true" width="720" height="1040" scrolling="yes" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
                 </div>
 
