--- a/volunteer.html
+++ b/volunteer.html
@@ -77,8 +77,8 @@
 
             <div class="section-title">
                 <br />
-                <h3>Volunteer With Us</h3>
-                <p>Help us in our mission of bringing Computer Science and Maths to every student<span style="font-size:12px; vertical-align: middle;">&#9632;</span> </p>
+                <h3><span style="font-size:12px; vertical-align: middle;">&#9632;</span> Volunteer With Us <span style="font-size:12px; vertical-align: middle;">&#9632;</span> </h3>
+                <p>Help us in our mission of bridging the gap and building education equity.</p>
                 <br />
             </div>
 
