--- a/aboutus.html
+++ b/aboutus.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Learn To Code</title>
+    <title>Gotech Bytes - Learn &Aacute; Grow</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
