--- a/envision.html
+++ b/envision.html
@@ -192,7 +192,7 @@
         }
 
         // Your JSON file path
-        var jsonFilePath = 'file:///Users/nidhigupta/Documents/GitHub/aiworld2020.github.io/envision.json';
+        var jsonFilePath = 'https://www.gotechbytes.com/envision.json';
 
         // Function to render internships
         function renderInternships() {
