--- a/aboutus.html
+++ b/aboutus.html
@@ -385,6 +385,7 @@
 
             <div class="copyright">
                 A 501(c)(3) non-profit, K-12 STEM initiative by the high-school students. <br />
+                San Ramon, California, United States <br/>
                 &copy; Copyright <strong><span>GoTechBytes</span></strong>. All Rights Reserved.
             </div>
 
