--- a/contact.html
+++ b/contact.html
@@ -102,6 +102,7 @@
 
             <div class="copyright">
                 A non-profit, K-12 STEM initiative by the high-school students. <br />
+                San Ramon, California, United States <br/>
                 &copy; Copyright <strong><span>GoTechBytes</span></strong>. All Rights Reserved.
             </div>
 
