--- a/aboutus.html
+++ b/aboutus.html
@@ -53,7 +53,7 @@
 
             <nav id="navbar" class="navbar order-last order-lg-0">
                 <ul>
-                    <li><a class="nav-link scrollto" href="#">Home</a></li>
+                    <li><a class="nav-link scrollto" href="index.html">Home</a></li>
                     <li class="dropdown">
                         <a href="index.html#popular-courses"><span>Courses</span> <i class="bi bi-chevron-down"></i></a>
 
@@ -77,7 +77,9 @@
                         <a href="#"><span>Coding Competitions</span> <i class="bi bi-chevron-down"></i></a>
                         <ul>
                             <li><a href="congress.html">Congressional App Challenge</a></li>
-                            <li><a href="https://www.usaco.org/">USACO</a></li>
+                            <li><a href="nasa.html">NASA ADC</a></li>
+                            <li><a href="http://www.usaco.org/index.php">USACO Challenge</a></li>
+                            <li><a href="https://usaco.guide/dashboard">USACO Guide</a></li>
                             
                         </ul>
                     </li>
@@ -85,7 +87,7 @@
                         <a class="nav-link scrollto" href="envision.html"><span>Project Envision</span></i></a>
                         
                     </li>
-                    <li><a class="nav-link scrollto" href="gallery.html">Gallery</a></li>
+                    <li><a class="nav-link scrollto" href="gallery.html">Events</a></li>
 
                     <li class="dropdown">
                         <a  class="active" href="aboutus.html"><span>About</span> <i class="bi bi-chevron-down"></i></a>
@@ -120,7 +122,7 @@
                     <div>
                         <h1>Learn to Code <span style="font-size:12px; vertical-align: middle;">&#9632;</span> Build a Better Future</h1>
 
-                        <h2>GoTech Bytes is a non-profit STEM outreach with focus in Computer Science and Maths for middle and high school students.</h2>
+                        <h2>GoTech Bytes is a non-profit STEM outreach with vision to build <mark><span class="text-primary">Education Equity</span></mark> through Computer Science for middle and high school students.</h2>
                         <a href="index.html#popular-courses" class="btn-get-started scrollto">Our Courses</a>
                     </div>
                 </div>
@@ -203,7 +205,7 @@
                     <div class="content pt-4 pt-lg-0">
 
                         <h4>
-                            Gotech Bytes is a student run non profit educational and community service organization. Its mission is to spark student interest in Computer Science and Maths from the earliest grades through high school.
+                            Gotech Bytes is a student run non profit educational and community service organization. Its mission is to spark student interest in Computer Science and Coding from the earliest grades through high school.
                         </h4>
                         <ul>
                             <li><i class="bi bi-check-circle"></i> Students sharing their knowledge with other students.</li>
@@ -385,7 +387,6 @@
 
             <div class="copyright">
                 A 501(c)(3) non-profit, K-12 STEM initiative by the high-school students. <br />
-                San Ramon, California, United States <br/>
                 &copy; Copyright <strong><span>GoTechBytes</span></strong>. All Rights Reserved.
             </div>
 
