--- a/notebooks.html
+++ b/notebooks.html
@@ -77,7 +77,9 @@
                         <a href="#"><span>Coding Competitions</span> <i class="bi bi-chevron-down"></i></a>
                         <ul>
                             <li><a href="congress.html">Congressional App Challenge</a></li>
-                            <li><a href="https://www.usaco.org/">USACO</a></li>
+                            <li><a href="nasa.html">NASA ADC</a></li>
+                            <li><a href="http://www.usaco.org/index.php">USACO Challenge</a></li>
+                            <li><a href="https://usaco.guide/dashboard">USACO Guide</a></li>
                             
                         </ul>
                     </li>
